manifests/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semanadevops-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing" 
    alb.ingress.kubernetes.io/target-type: "ip" 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' 
    alb.ingress.kubernetes.io/healthcheck-path: "/health" 
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port" 
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP" 
  labels:
    app: semana-devops
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semana-devops
                port:
                  number: 8081
